@@ -1,7 +1,8 @@
 windows <- function(width = 7, height = 7, pointsize = 12,
                     record = getOption("graphics.record"),
                     rescale = c("R", "fit", "fixed"), xpinch, ypinch,
-                    canvas = "white", gamma = getOption("gamma"))
+                    canvas = "white", gamma = getOption("gamma"),
+                    xpos = NA, ypos = NA)
 {
     rescale <- match.arg(rescale)
     rescale <- match(rescale, c("R", "fit", "fixed"))
@@ -13,7 +14,9 @@ windows <- function(width = 7, height = 7, pointsize = 12,
     ypinch <- as.double(ypinch)
     .Internal(devga("", width, height, pointsize, record, rescale,
                     xpinch, ypinch, canvas,
-                    if(is.null(gamma)) 1 else gamma))
+                    if(is.null(gamma)) 1 else gamma,
+                    as.integer(xpos), as.integer(ypos)
+                    ))
 }
 
 win.graph <- function(width = 7, height = 7, pointsize = 12)
