@@ -15,6 +15,9 @@ see the comments in .../etc/Rconsole.  The initial position of the
 console window and graphics windows can be set in Rconsole and in the
 GUI Preferences editor.
 
+The windows() graphics device has now arguments xpos, ypos to set the
+initial position, overriding the settings in Rconsole.
+
 The windows() device has a form of double-buffering: the visible plot
 is updated only when there has been no plotting for 0.1sec or if the
 plot has not been updated for 0.5sec. [Currently only enabled if
